--- a/app/globals.css
+++ b/app/globals.css
@@ -1,33 +1,33 @@
 @import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
 
-  /* Primary theme colors */
-  --theme-text-color: #0145A1;
-  --theme-accent-color: #0145A1;
-  --theme-bg-color: #AC9D80;
+@layer base {
+  :root {
+    --background: #ffffff;
+    --foreground: #171717;
 
-  /* Secondary theme colors */
-  --theme-secondary-text-color: #333333;
-  --theme-secondary-accent-color: #2A6FB8;
-  --theme-secondary-bg-color: #D8CBAD;
+    /* Primary theme colors */
+    --theme-text-color: #0145A1;
+    --theme-accent-color: #0145A1;
+    --theme-bg-color: #AC9D80;
 
-  /* default Button text color*/
-  --theme-button-text-color: #ffffff;
+    /* Secondary theme colors */
+    --theme-secondary-text-color: #333333;
+    --theme-secondary-accent-color: #2A6FB8;
+    --theme-secondary-bg-color: #D8CBAD;
 
-  /* --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-  --font-manrope: var(--font-manrope); */
+    /* default Button text color*/
+    --theme-button-text-color: #ffffff;
+  }
 }
 
-@theme {
+@theme inline {
 
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-manrope: var(--font-manrope);
 
   /* Primary theme colors */
   --color-theme: var(--theme-text-color);
@@ -38,11 +38,8 @@
   --color-theme-secondary-text: var(--theme-secondary-text-color);
   --color-theme-secondary-accent: var(--theme-secondary-accent-color);
   --color-theme-secondary-bg: var(--theme-secondary-bg-color);
-
-  --font-geist-sans: var(--font-geist-sans);
-  --font-geist-mono: var(--font-geist-mono);
-  --font-manrope: var(--font-manrope);
 }
+
 
 @media (prefers-color-scheme: dark) {
   :root {
@@ -57,6 +54,11 @@ body {
   font-family: var(--font-sans);
 }
 
+body,
+main,
+div {
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
 
 @layer utilities {
   @keyframes blink {
@@ -76,9 +78,21 @@ body {
   }
 }
 
-
-/* ensures content is hidden during initial load 
 html:not(.hydrated) {
   opacity: 0;
 }
-    */
+
+html.hydrated {
+  opacity: 1;
+  transition: opacity 0.4s ease-in;
+}
+
+html:not(.hydrated) {
+  animation: show 0s 3s forwards;
+}
+
+@keyframes show {
+  to {
+    opacity: 1;
+  }
+}
